plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'hu.garaba'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClassName = 'hu.garaba.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

dependencies {
    implementation 'org.slf4j:slf4j-simple:2.0.7'

    implementation 'org.telegram:telegrambots:6.5.0'
    implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
}